refactor(pm): remove tenantId from custom fields and related logic for system-owned catalog